src/test/deca/syntax/invalid/intermediaire2/wrongValue/02negInt.deca
// Description:
//    Programme initialisant une variable int avec une valeur negative inferieur a la valeur minimale autorisee.
//
// Resultats:
//    02negInt.lis
//
// Historique:
//    cree le 10/06/2022

{
    int x = -2147483648;
}